--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -350,6 +350,7 @@ relative_wis_thresholds <- relative_wis |>
 ## Implementation {-}
 
 The model is implemented in `stan` [@stan] and `R` (`4.2.0`) [@R] as an extension of the baseline model from the `forecast.vocs` R package (`0.0.9.7000`) [@forecast.vocs].
+We note that our use of a Heaviside step function introduces a discontinuity to the posterior making it less suited for use with `stan`. Other model formulations without this would be more efficient.
 The `cmdstanr` R package (`0.5.2`) [@cmdstanr] is used for model fitting with 2 MCMC chains each having 1000 warm-up and 1000 sampling steps each [@cmdstanr].
 `cmstanr` surfaces several settings which trade-off between sampling speed and the robustness of approach.
 Here we take a conservative approach, as model fit is not manually inspected during real-time usage and due to the expected complexity of the posterior [@betancourt_2017], and set the adapt delta setting to 0.99, and the maximum treedepth setting to 15. 
@@ -515,7 +516,7 @@ suppressWarnings(print(p))
 
 ## Summary {-}
 
-In this study, we defined a surrogate model aiming to replicate some of the observed behaviour of the ECDC forecast hub multi-team ensemble for forecasting test positive reported COVID-19 cases in ECDC nations and the UK. We first defined a set of assumptions for how the surrogate model should behaved based on our observations of the ECDC forecast hub ensemble, our experiance submitting forecasts to various forecast Hubs and our observations of the performance of other models. We restricted ourselves to a model that could be easily understood, that produced meaningful summary statistics, and that could be run with low compute resources. We further provide a fully reproducibile workflow for running this model using GitHub actions and code to evaluate its performance. 
+In this study, we defined a surrogate model aiming to replicate some of the observed behaviour of the ECDC forecast hub multi-team ensemble for forecasting test positive reported COVID-19 cases in ECDC nations and the UK. We first defined a set of assumptions for how the surrogate model should behaved based on our observations of the ECDC forecast hub ensemble, our experiance submitting forecasts to various forecast Hubs, and our observations of the performance of other models. We restricted ourselves to a model that could be easily understood, that produced epidemiologically meaningful summary statistics, and that could be run with low compute resources. We further provide a fully reproducibile workflow for running this model using GitHub actions and code to evaluate its performance. 
 
 Over the 6 months of the study period, we found that our surrogate model performed adequately at reproducing the forecast hub ensemble with average performance that was in general slightly worse though this varied by location and forecast date. Performance was closest for short forecast horizons and degraded relative to the forecast hub ensemble as the horizon increased. We observed that our surrogate model displayed similar levels of robustness to the forecast ensemble with few outlier forecasts unlike our previous forecasting efforts [@refNikosinGermany] and also partially captured the hub ensembles propensity to forecast reductions in incidence after periods of increase. Unlike the forecast hub ensemble our surrogate model was well calibrated for most horizons and credible intervals explored though it was overly uncertain at short horizons. We found that the majority of the difference in performance between our surrogate model and the hub ensemble occured in the tails of the predictive distribution with similar central forecasts.
 
