write results summary

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -516,9 +516,21 @@ suppressWarnings(print(p))
 
 ## Summary {-}
 
-In this study, we defined a surrogate model aiming to replicate some of the observed behaviour of the ECDC forecast hub multi-team ensemble for forecasting test positive reported COVID-19 cases in ECDC nations and the UK. We first defined a set of assumptions for how the surrogate model should behaved based on our observations of the ECDC forecast hub ensemble, our experiance submitting forecasts to various forecast Hubs, and our observations of the performance of other models. We restricted ourselves to a model that could be easily understood, that produced epidemiologically meaningful summary statistics, and that could be run with low compute resources. We further provide a fully reproducibile workflow for running this model using GitHub actions and code to evaluate its performance. 
+In this study, we defined a surrogate model aiming to replicate some of the observed behaviour of the ECDC forecast hub multi-team ensemble for forecasting test positive reported COVID-19 cases in ECDC nations and the UK.
+We first defined a set of assumptions for how the surrogate model should behaved based on our observations of the ECDC forecast hub ensemble, our experience submitting forecasts to various forecast Hubs, and our observations of the performance of other models.
+We restricted ourselves to a model that could be easily understood, that produced epidemiologically meaningful summary statistics, and that could be run with low compute resources.
+We further provide a fully reproducibile workflow for running and evaluating this model using GitHub actions facilitating others to do the same. 
 
-Over the 6 months of the study period, we found that our surrogate model performed adequately at reproducing the forecast hub ensemble with average performance that was in general slightly worse though this varied by location and forecast date. Performance was closest for short forecast horizons and degraded relative to the forecast hub ensemble as the horizon increased. We observed that our surrogate model displayed similar levels of robustness to the forecast ensemble with few outlier forecasts unlike our previous forecasting efforts [@refNikosinGermany] and also partially captured the hub ensembles propensity to forecast reductions in incidence after periods of increase. Unlike the forecast hub ensemble our surrogate model was well calibrated for most horizons and credible intervals explored though it was overly uncertain at short horizons. We found that the majority of the difference in performance between our surrogate model and the hub ensemble occured in the tails of the predictive distribution with similar central forecasts.
+Over the 6 months of the study period, we found that our surrogate model produced forecasts that were visually similar to those from the forecast hub ensemble though with greater uncertainty.
+In a subset of example locations, we observed some variation in performance across locations, that the ensemble appeared biased towards underprediction, and the surrrogate model appeared biased towards overprediction.
+Evaluating the relative performance of the surrogate model compard to ECDC forecast hub ensemble we found that the mean performance was substantially worse but that this was largely driven by a relatively small subset of forecasts.
+The median relative performance was only marginally worse across forecast horizons with the distribution of relative scores having a heavy right tail.
+Performance varied by location and forecast date with the surrogate mdoel performing worse in the first part of 2021 which may have been linked to increasing indicence rates accross forecast locations linked to BA.2.
+Unlike our earlier forecasting efforts the effect of outlier forecasts was much reduced though the surrogate model was less likely to outperform the ensemble than our earlier forecasting model methodology [@refNikosinGermany].
+In general, the relative performance of the surrogate model was stable across forecast horizons, unlike our previous methods which rapidly became less performant, though the distribution of relative performance did have an increasingly heavy right tail as forecast horizon increased indicating a greater share of forecasts performing very poorly in comparison the the hub ensemble.
+As noted elsewhere, the forecast hub ensemble was poorly calibrated, particularly at longer forecast horizons and bigger credible intervals whereas the surrogate model was substantially better calibrated for all targets though it tended to over cover at large intervals.
+Stratifying the relative weighted interval score by interval we found that larger intervals (i.e the tails of the forecast distribution) were responsible for the majority of difference in performance difference. 
+Indeed, median point performance of the forecasts were comparable though the surrogate model performed susbtantially worse on average due to its skewed performance distribution.
 
 ## Stengths and weaknesses {-}
 
