--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -20,7 +20,7 @@ affiliation:
   - code: 2
     address: Chair of Statistics and Econometrics, Karlsruhe Institute of Technology (KIT), Karlsruhe, Germany
 abstract: > 
-  Multi-model and multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts, especially during the COVID-19 pandemic. However, these forecasts require a coordinated team to produce and are effectively black boxes. In other fields, resource usage has been reduced by training simplified models that reproduce some of the observed behaviour of more complex models. Here we use observations of the behaviour of the ECDC forecast ensemble to specify a series of model assumptions. We then specify a forecast model using these assumptions and compare its performance to the ECDC forecast hub ensemble in real-time from the 15th of January 2022 to the 19th of July 2022 over a four week forecast horizon. We found that this surrogate model performed visibly similarly to a subset of locations though with increased uncertainty. Using the weighted interval score we concluded that average performance was substantially worse but that median performance was more comparable. The majority of the difference in performance was linked to a subset of forecasts from a period of high incidence. We note that despite performing worse than the hub ensemble the majority of the time our surrogate model was better calibrated, and less liable to underpredict. This finding was supported by the observation that the central part of the surrogate models forecast distribution performed more similarly to ensemble forecasts distribution and that the tails of the surrogate forecast distribution were responsible for the large majority of the difference in median forecast performance. We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble but that more work needs to be done to understand the epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders requirements. We also conclude that our findings are largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements. Our work maybe be useful for forecast users to understand the inherent assumptions of the forecasts they are making use of and to methodology developers thinking about how to develop forecasts that perform similary to current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
+  Multi-model and multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts, especially during the COVID-19 pandemic. However, these forecasts require a coordinated team to produce and are effectively black boxes. In other fields, resource usage has been reduced by training simplified models that reproduce some of the observed behaviour of more complex models. Here we use observations of the behaviour of the ECDC forecast ensemble to specify a series of model assumptions. We then develop a forecast model using these assumptions and compare its performance to the ECDC forecast hub ensemble in real-time from the 15th of January 2022 to the 19th of July 2022 over a four week forecast horizon. We found that this surrogate model performed visibly similarly to a subset of locations though with increased uncertainty. Using the weighted interval score we concluded that average performance was substantially worse but that median performance was more comparable. The majority of the difference in performance was linked to a subset of forecasts from a period of high incidence. We note that despite performing worse than the hub ensemble the majority of the time our surrogate model was better calibrated, and less liable to underpredict.  The central part of the surrogate models forecast distribution performed more similarly to ensemble forecasts distribution whilst the tails of the surrogate forecast distribution were responsible for the large majority of the difference in median forecast performance. We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble but that more work needs to be done to understand the implicit epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders requirements. We also conclude that our findings are largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements. Our work maybe useful for forecast consumers as a tool for understanding the inherent assumptions of the forecasts they are making use of and to researchers developing forecast approaches that perform similary, or better than, current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
 bibliography: library.bib
 output:
   bookdown::pdf_book:
@@ -614,6 +614,6 @@ SA, and SF were funded by a Wellcome senior fellowship to SF (), KS was funded b
 
 # Acknowledgments {-}
 
-We thank the ECDC for support the forecasting hub, and all forecasters who submitted forecasts for making this study possible. We thank the forecast hub team for publishing all data in an accessible format. We thank Molly for being a good Labrador.
+We thank the ECDC for supporting the forecasting hub, and all forecasters who submitted forecasts for making this study possible. We thank the forecast hub team for publishing all data in an accessible format. We thank Molly for being a good Labrador.
 
 # References
